--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
+        "express": "^4.17.1",
         "next": "^9.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     },
     "devDependencies": {},
     "scripts": {
-        "dev": "next",
+        "dev": "node server.js",
         "build": "next build",
         "start": "next start"
     },
