--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "express": "^4.17.1",
+        "isomorphic-unfetch": "^3.0.0",
         "next": "^9.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
