setup es6 syntax for server

--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
+        "cross-env": "^5.2.0",
         "express": "^4.17.1",
         "isomorphic-unfetch": "^3.0.0",
         "next": "^9.0.0",
         "react": "^16.8.6",
         "react-dom": "^16.8.6"
     },
-    "devDependencies": {},
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "nodemon": "^1.19.1"
+    },
     "scripts": {
-        "dev": "node server.js",
-        "build": "next build",
-        "start": "next start"
+        "dev": "cross-env NODE_ENV=development nodemon server.js --exec babel-node --presets babel-preset-env --watch server.js",
+        "build": "yarn build:next && yarn build:server",
+        "build:next": "next build",
+        "build:server": "cross-env NODE_ENV=production babel server.js --out-dir .next/dist",
+        "start": "cross-env NODE_ENV=production node .next/dist/server.js"
     },
     "author": "",
     "license": "ISC"
